add: api to update and delete user
