# api/server/repositories/user.repository.go
@@ -9,7 +9,10 @@ import (
 type UserRepository interface {
 	GetUserByEmail(user *models.User, email string) error
 	GetAllUsersByEmail(users *[]models.User, email string) error
+	GetUserById(user *models.User, id int) error
 	CreateUser(createUser *models.User) error
+	UpdateUser(user *models.User, userId int) error
+	DeleteUser(userIdf int) error
 }
 
 type userRepository struct {
@@ -21,7 +24,7 @@ func NewUserRepository(db *gorm.DB) UserRepository {
 }
 
 /*
-emailに紐づくユーザーリストを取得
+emailに紐づくユーザーを取得
 */
 func (ur *userRepository) GetUserByEmail(user *models.User, email string) error {
 	// db := db.GetDB()
@@ -45,6 +48,17 @@ func (ur *userRepository) GetAllUsersByEmail(users *[]models.User, email string)
 }
 
 /*
+userIdに紐づくユーザーを取得
+*/
+func (ur *userRepository) GetUserById(user *models.User, id int) error {
+	if err := ur.db.Where("id=?", id).First(&user).Error; err != nil {
+		return err
+	}
+
+	return nil
+}
+
+/*
 ユーザーデータ新規登録
 */
 func (ur *userRepository) CreateUser(createUser *models.User) error {
@@ -53,5 +67,25 @@ func (ur *userRepository) CreateUser(createUser *models.User) error {
 		return err
 	}
 
+	return nil
+}
+
+/*
+ユーザーデータ更新
+*/
+func (ur *userRepository) UpdateUser(user *models.User, userId int) error {
+	if err := ur.db.Where("id=?", userId).Updates(&user).Error; err != nil {
+		return err
+	}
+	return nil
+}
+
+/*
+ユーザーデータ削除
+*/
+func (ur *userRepository) DeleteUser(userId int) error {
+	if err := ur.db.Where("id=?", userId).Delete(&models.User{}).Error; err != nil {
+		return err
+	}
 	return nil
 }
