# api/server/router/users.router.go
@@ -1,6 +1,8 @@
 package router
 
 import (
+	"net/http"
+
 	"github.com/gorilla/mux"
 
 	"tobuy-app/api/server/controllers"
@@ -11,13 +13,19 @@ type UsersRouter interface {
 }
 
 type usersRouter struct {
-	usc controllers.UsersController
+	uc controllers.UsersController
 }
 
-func NewUsersRouter(usc controllers.UsersController) UsersRouter {
-	return &usersRouter{usc}
+func NewUsersRouter(uc controllers.UsersController) UsersRouter {
+	return &usersRouter{uc}
 }
 
-func (usr *usersRouter) SetUsersRouting(router *mux.Router) {
-	router.HandleFunc(basePath+"/users", usr.usc.UsersPage).Methods("GET")
+func (ur *usersRouter) SetUsersRouting(router *mux.Router) {
+	// router.HandleFunc(basePath+"/users", ur.uc.UsersPage).Methods("GET")
+	// UpdateUser
+	router.HandleFunc(basePath+"/me/update", ur.uc.UpdateUser).Methods(http.MethodPost)
+	// UpdatePassword
+	router.HandleFunc(basePath+"/me/update/password", ur.uc.UpdatePassword).Methods(http.MethodPost)
+	// DeleteUser
+	router.HandleFunc(basePath+"/me/delete", ur.uc.DeleteUser).Methods(http.MethodPost)
 }
